[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
mob_scene = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
__meta__ = {
"_editor_description_": "몹 스폰 빈도를 제어합니다."
}

[node name="ScoreTimer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": "매초 점수를 증가시킵니다."
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": "시작하기 전에 지연을 주기 위해"
}

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 350 )
__meta__ = {
"_editor_description_": "플레이어의 시작 위치를 나타냅니다."
}

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
